# zcash-htlc-builder

./: .env.example  .gitignore  Cargo.toml  README.md  diesel.toml  zcash-config.toml.example
migrations/2025-11-29-213641_create_zcash_htlcs/: down.sql  up.sql
migrations/2025-11-29-213753_create_indexer_checkpoints/: down.sql  up.sql
migrations/2025-11-29-213826_create_htlc_operations/: down.sql  up.sql
migrations/2025-11-30-150907_create_relayer_utxos/: down.sql  up.sql
sample_script/: test_htlc_flow.rs
src/: builder.rs  config.rs  lib.rs  rpc.rs  script.rs  signer.rs
src/database/: connections.rs  mod.rs  model.rs  operations.rs
src/models/: mod.rs  schema.rs
