[package]
name = "zcash-htlc-builder"
version = "0.1.0"
edition = "2021"
authors = ["Okoli Evans <ebounce500@gmail.com>"]
description = "Production-ready Zcash HTLC builder for atomic swaps using transparent transactions"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Mist-Labs/zcash-htlc-builder"
homepage = "https://github.com/Mist-Labs/zcash-htlc-builder"
documentation = "https://docs.rs/zcash-htlc-builder"
readme = "README.md"
keywords = ["zcash", "htlc", "atomic-swap", "bitcoin", "blockchain"]
categories = ["cryptography::cryptocurrencies"]
rust-version = "1.70"

[lib]
name = "zcash_htlc_builder"
path = "src/lib.rs"

[[bin]]
name = "zcash-htlc-cli"
path = "src/bin/cli.rs"

[dependencies]
bitcoin = { version = "0.29", features = ["serde"] }
secp256k1 = { version = "0.28", features = ["rand-std", "global-context"] }
bs58 = "0.5"
bech32 = "0.11"
sha2 = "0.10"
ripemd = "0.1"
diesel = { version = "2.1", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "2.1"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"
dotenv = "0.15"
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }

[dev-dependencies]
tokio-test = "0.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]